🔧 Fix style mismatch

--- a/projects/notedown-parser/tests/simple/text.yaml
+++ b/projects/notedown-parser/tests/simple/text.yaml
@@ -6,85 +6,91 @@ ASTNode {
                     [
                         ASTNode {
                             kind: TextSpan(
+                                TextNode::Escaped(\),
+                            ),
+                            range: 0..2,
+                        },
+                        ASTNode {
+                            kind: TextSpan(
                                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor",
                             ),
-                            range: 0..78,
+                            range: 2..80,
                         },
                         ASTNode {
                             kind: TextSpan(
                                 "\n",
                             ),
-                            range: 78..79,
+                            range: 80..81,
                         },
                         ASTNode {
                             kind: TextSpan(
                                 "incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis",
                             ),
-                            range: 79..153,
+                            range: 81..155,
                         },
                         ASTNode {
                             kind: TextSpan(
                                 "\n",
                             ),
-                            range: 153..154,
+                            range: 155..156,
                         },
                         ASTNode {
                             kind: TextSpan(
                                 "nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
                             ),
-                            range: 154..231,
+                            range: 156..233,
                         },
                         ASTNode {
                             kind: TextSpan(
                                 "\n",
                             ),
-                            range: 231..232,
+                            range: 233..234,
                         },
                         ASTNode {
                             kind: TextSpan(
                                 "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore",
                             ),
-                            range: 232..308,
+                            range: 234..310,
                         },
                         ASTNode {
                             kind: TextSpan(
                                 "\n",
                             ),
-                            range: 308..309,
+                            range: 310..311,
                         },
                         ASTNode {
                             kind: TextSpan(
                                 "eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt",
                             ),
-                            range: 309..387,
+                            range: 311..389,
                         },
                         ASTNode {
                             kind: TextSpan(
                                 "\n",
                             ),
-                            range: 387..388,
+                            range: 389..390,
                         },
                         ASTNode {
                             kind: TextSpan(
                                 "in culpa qui officia deserunt mollit anim id est laborum.",
                             ),
-                            range: 388..445,
+                            range: 390..447,
                         },
                         ASTNode {
                             kind: TextSpan(
                                 "\n",
                             ),
-                            range: 445..446,
+                            range: 447..448,
                         },
                         ASTNode {
                             kind: TextSpan(
                                 "    ",
                             ),
-                            range: 446..450,
+                            range: 448..452,
                         },
                     ],
                 ),
-                range: 0..450,
+                range: 0..452,
             },
         ],
     ),
