--- a/projects/notedown-parser/tests/simple/url.yaml
+++ b/projects/notedown-parser/tests/simple/url.yaml
@@ -5,112 +5,87 @@ ASTNode {
                 kind: Paragraph(
                     [
                         ASTNode {
-                            kind: TextSpan(
-                                Normal(
-                                    "    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor",
-                                ),
+                            kind: LinkNode(
+                                HyperLink {
+                                    src: "https://www.zhihu.com/question/311834230/answer/595009063",
+                                    is_bare: true,
+                                },
                             ),
-                            range: "1-83",
+                            range: 1..58,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "\n",
-                                ),
+                                "\n",
                             ),
-                            range: "83-84",
+                            range: 58..59,
                         },
                         ASTNode {
-                            kind: TextSpan(
-                                Normal(
-                                    "    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis",
-                                ),
+                            kind: LinkNode(
+                                HyperLink {
+                                    src: "http://mathworld.wolfram.com/PrimeFormulas.style",
+                                    is_bare: true,
+                                },
                             ),
-                            range: "84-162",
-                        },
-                        ASTNode {
-                            kind: TextSpan(
-                                Normal(
-                                    "\n",
-                                ),
-                            ),
-                            range: "162-163",
-                        },
-                        ASTNode {
-                            kind: TextSpan(
-                                Normal(
-                                    "    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
-                                ),
-                            ),
-                            range: "163-244",
-                        },
-                        ASTNode {
-                            kind: TextSpan(
-                                Normal(
-                                    "\n",
-                                ),
-                            ),
-                            range: "244-245",
-                        },
-                        ASTNode {
-                            kind: TextSpan(
-                                Normal(
-                                    "    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore",
-                                ),
-                            ),
-                            range: "245-325",
-                        },
-                        ASTNode {
-                            kind: TextSpan(
-                                Normal(
-                                    "\n",
-                                ),
-                            ),
-                            range: "325-326",
-                        },
-                        ASTNode {
-                            kind: TextSpan(
-                                Normal(
-                                    "    eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt",
-                                ),
-                            ),
-                            range: "326-408",
-                        },
-                        ASTNode {
-                            kind: TextSpan(
-                                Normal(
-                                    "\n",
-                                ),
-                            ),
-                            range: "408-409",
-                        },
-                        ASTNode {
-                            kind: TextSpan(
-                                Normal(
-                                    "    in culpa qui officia deserunt mollit anim id est laborum.",
-                                ),
-                            ),
-                            range: "409-470",
-                        },
-                        ASTNode {
-                            kind: TextSpan(
-                                Normal(
-                                    "\n",
-                                ),
-                            ),
-                            range: "470-471",
-                        },
-                        ASTNode {
-                            kind: TextSpan(
-                                Normal(
-                                    "    ",
-                                ),
-                            ),
-                            range: "471-475",
+                            range: 59..107,
                         },
                     ],
                 ),
-                range: "1-475",
+                range: 1..107,
+            },
+            ASTNode {
+                kind: Paragraph(
+                    [
+                        ASTNode {
+                            kind: TextSpan(
+                                "Page210",
+                            ),
+                            range: 109..116,
+                        },
+                        ASTNode {
+                            kind: TextSpan(
+                                "\n",
+                            ),
+                            range: 116..117,
+                        },
+                        ASTNode {
+                            kind: LinkNode(
+                                HyperLink {
+                                    src: "http://read.pudn.com/downloads133/ebook/566944/%E9%AB%98%E6%95%88%E7%A8%8B%E5%BA%8F%E7%9A%84%E5%A5%A5%E7%A7%98.pdf",
+                                    is_bare: true,
+                                },
+                            ),
+                            range: 117..231,
+                        },
+                        ASTNode {
+                            kind: TextSpan(
+                                "\n",
+                            ),
+                            range: 231..232,
+                        },
+                        ASTNode {
+                            kind: LinkNode(
+                                HyperLink {
+                                    src: "ftp://www.m-hikari.com/ams/ams-2012/ams-73-76-2012/kaddouraAMS73-76-2012.pdf",
+                                    is_bare: true,
+                                },
+                            ),
+                            range: 232..308,
+                        },
+                        ASTNode {
+                            kind: TextSpan(
+                                "\n",
+                            ),
+                            range: 308..309,
+                        },
+                        ASTNode {
+                            kind: TextSpan(
+                                "    ",
+                            ),
+                            range: 309..313,
+                        },
+                    ],
+                ),
+                range: 109..313,
             },
         ],
     ),
