--- a/projects/notedown-lsp/Cargo.toml
+++ b/projects/notedown-lsp/Cargo.toml
@@ -21,6 +21,7 @@ log = "0.4"
 nom = { version = "5.1", default-features = false, features = ["std"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.8"
 tiny-keccak = { version = "2.0", features = ["keccak"] }
 tokio = { version = "0.2", features = ["rt-core", "io-std", "macros", "test-util"] }
 tokio-util = { version = "0.3", features = ["codec"] }
@@ -28,8 +29,3 @@ tower-lsp = "0.13"
 tower-service = "0.3"
 tower-test = "0.3"
 
-
-[dev-dependencies]
-
-[features]
-default = []
