--- a/projects/notedown-storage/Cargo.toml
+++ b/projects/notedown-storage/Cargo.toml
@@ -12,4 +12,16 @@ edition = "2021"
 [dependencies]
 notedown_ast = {version = "0.14", path = "../notedown-ast"}
 
+[dependencies.syntect]
+version = "4.6.0"
+optional = true
+features = ["metadata"]
+
+[dependencies.self_update]
+version = "0.28.0"
+
+
 [dev-dependencies]
+
+[features]
+default = ["syntect"]
