🔮 Adapt rsass error handling

--- a/projects/notedown-package-manager/Cargo.toml
+++ b/projects/notedown-package-manager/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "notedown-storage"
+name = "notedown-pm"
 version = "0.1.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Text parser"
