--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -17,7 +17,7 @@ indexmap = "1.7.0"
 #notedown-image = { version = "0.1", path = "../notedown-image", optional = true }
 dashmap = "5.0.0"
 pest = { version = "2.1.3", optional = true }
-
+rsass = { version = "0.23.0", optional = true }
 
 [dev-dependencies]
 
