--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "private": true,
     "scripts": {
+        "up": "cargo publish --allow-dirty",
         "install": "cargo install --path projects/notedown-lsp --debug",
         "test": "cargo test --release",
         "fmt": "cargo fmt --all",
