--- a/projects/notedown-runtime/Cargo.toml
+++ b/projects/notedown-runtime/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "notedown-pm"
+name = "notedown-rt"
 version = "0.1.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Text parser"
@@ -11,6 +11,7 @@ edition = "2021"
 
 [dependencies]
 notedown_ast = {version = "0.14", path = "../notedown-ast"}
+dashmap = "*"
 
 [dependencies.syntect]
 version = "4.6.0"
