--- a/projects/text-utils/package.json
+++ b/projects/text-utils/package.json
@@ -2,7 +2,7 @@
     "name": "text-workspace",
     "private": true,
     "scripts": {
-        "build:pest": "cargo test --color=always --no-run --package notedown-parser --lib pre_build && cargo fmt --all",
+        "up": "cargo publish --allow-dirty",
         "build": "cargo build --release",
         "test": "cargo test --release",
         "fmt": "cargo fmt --all",
