🔮 Manage text-utils

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,11 @@
 members = ["projects/*"]
 default-members = [
     "projects/notedown-ast",
-    "projects/notedown-pest",
-    "projects/notedown-parser",
-    "projects/notedown-parser2",
+#    "projects/notedown-pest",
+#    "projects/notedown-parser",
+#    "projects/notedown-parser2",
     "projects/notedown-plugin",
+    "projects/text-utils",
 ]
 exclude = [
 
