--- a/projects/text-utils/Cargo.toml
+++ b/projects/text-utils/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "text-utils"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Aster <192607617@qq.com>"]
-repository = "https://github.com/GalAster/text-utils-rs"
-documentation = "https://docs.rs/text-utils/0.2.4/tokio/"
+repository = "https://github.com/notedge/notedown-rs/tree/master/projects/text-utils"
+documentation = "https://docs.rs/text-utils/latest/text_utils/"
 description = """
 Text utils for unescaping and align
 """
 categories = []
 keywords = ["text", "utils"]
-readme = "README.md"
+readme = "Readme.md"
 license = "MPL-2.0"
-edition = "2018"
+edition = "2021"
 exclude = ["/tests/*"]
 
 
