--- a/projects/text-utils/Cargo.toml
+++ b/projects/text-utils/Cargo.toml
@@ -3,7 +3,7 @@ name = "text-utils"
 version = "0.3.1"
 authors = ["Aster <192607617@qq.com>"]
 repository = "https://github.com/notedge/notedown-rs/tree/master/projects/text-utils"
-documentation = "https://docs.rs/text-utils/latest/text_utils/"
+documentation = "https://docs.rs/text-utils"
 description = """
 Text utils for unescaping and align
 """
