📑 Force doc text-utils

--- a/projects/text-utils/Cargo.toml
+++ b/projects/text-utils/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "text-utils"
-version = "0.3.1"
+version = "0.4.0"
 authors = ["Aster <192607617@qq.com>"]
 repository = "https://github.com/notedge/notedown-rs/tree/master/projects/text-utils"
 documentation = "https://docs.rs/text-utils"
 description = """
 Text utils for unescaping and align
 """
-categories = []
+categories = ["text"]
 keywords = ["text", "utils"]
 readme = "Readme.md"
 license = "MPL-2.0"
