--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -10,7 +10,6 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
-text-utils = "0.3.1"
 yggdrasil-shared = "0.1.5"
 num = "0.4.0"
 rust_decimal = "1.19.0"
@@ -18,6 +17,10 @@ itertools = "0.10.3"
 indexmap = "1.7.0"
 pest = { version = "2.1.3", optional = true }
 rsass = { version = "0.23.0", optional = true }
+
+[dependencies.text-utils]
+version = "0.4"
+path = "../text-utils"
 
 [dev-dependencies]
 
