--- a/projects/text-utils/Cargo.toml
+++ b/projects/text-utils/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "text-utils"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["Aster <192607617@qq.com>"]
 repository = "https://github.com/notedge/notedown-rs/tree/master/projects/text-utils"
 documentation = "https://docs.rs/text-utils"
@@ -16,6 +16,7 @@ exclude = ["/tests/*"]
 
 
 [dependencies]
-textwrap = "0.11"
+textwrap = "0.14.2"
 percent-encoding = "2.1.0"
 slugify = "0.1.0"
+emojic = "0.4.0"
