--- a/projects/text-utils/Cargo.toml
+++ b/projects/text-utils/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "text-utils"
-version = "0.4.1"
+version = "0.4.3"
 authors = ["Aster <192607617@qq.com>"]
 repository = "https://github.com/notedge/notedown-rs/tree/master/projects/text-utils"
 documentation = "https://docs.rs/text-utils"
 description = """
 Text utils for unescaping and align
 """
-categories = ["text"]
+categories = ["text-processing", "encoding"]
 keywords = ["text", "utils"]
 readme = "Readme.md"
 license = "MPL-2.0"
@@ -20,3 +20,5 @@ textwrap = "0.14.2"
 percent-encoding = "2.1.0"
 slugify = "0.1.0"
 emojic = "0.4.0"
+css-color-parser = "0.1.2"
+html-escape = "0.2.9"
