🔮 Add diagnostic collector

--- a/projects/notedown-runtime/Cargo.toml
+++ b/projects/notedown-runtime/Cargo.toml
@@ -10,8 +10,10 @@ edition = "2021"
 
 
 [dependencies]
-notedown_ast = {version = "0.14", path = "../notedown-ast"}
-dashmap = "*"
+notedown_ast = {version = "0.14", path = "../notedown-ast", features = ["globset"]}
+dashmap = "5.0.0"
+globset = "0.4.8"
+async-std = "1.10.0"
 
 [dependencies.syntect]
 version = "4.6.0"
