--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -19,6 +19,7 @@ itertools = "0.10.3"
 indexmap = "1.7.0"
 pest = { version = "2.1.3", optional = true }
 rsass = { version = "0.23.0", optional = true }
+globset = {version = "0.4.8", optional = true}
 
 [dependencies.text-utils]
 version = "0.4"
