--- a/projects/notedown-runtime/Cargo.toml
+++ b/projects/notedown-runtime/Cargo.toml
@@ -14,6 +14,7 @@ notedown_ast = {version = "0.14", path = "../notedown-ast", features = ["globset
 dashmap = "5.0.0"
 globset = "0.4.8"
 async-std = "1.10.0"
+ropey = "1.3.1"
 
 [dependencies.syntect]
 version = "4.6.0"
