--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -12,7 +12,7 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
-yggdrasil-shared = "0.1.5"
+url = "2.2.2"
 num = "0.4.0"
 rust_decimal = "1.19.0"
 itertools = "0.10.3"
