--- a/projects/notedown-runtime/Cargo.toml
+++ b/projects/notedown-runtime/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 
 
 [dependencies]
+yggdrasil-shared = "0.1.5"
 notedown_ast = {version = "0.14", path = "../notedown-ast", features = ["globset"]}
 dashmap = "5.0.0"
 globset = "0.4.8"
