--- a/projects/notedown-lsp/Cargo.toml
+++ b/projects/notedown-lsp/Cargo.toml
@@ -13,16 +13,18 @@ edition = "2018"
 notedown_parser = "0.7.4"
 async-trait = "0.1"
 futures = { version = "0.3", features = ["compat"] }
-jsonrpc-core = "14.0"
-jsonrpc-derive = "14.0"
+# jsonrpc-core = "14.0"
+# jsonrpc-derive = "14.0"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "0.2", features = ["rt-core", "io-std", "macros", "test-util"] }
-tokio-util = { version = "0.3", features = ["codec"] }
+tokio-util = { version = "0.6", features = ["codec"] }
 # lsp-types = { version = "0.82", features = ["proposed"] }
 tower-lsp = "0.13"
 tower-service = "0.3"
 tower-test = "0.3"
 # clipboard = "0.5"
 cli-clipboard = "0.2"
+unicode-xid = "0.2"
+state = "0.2"
