--- a/projects/notedown-runtime/Cargo.toml
+++ b/projects/notedown-runtime/Cargo.toml
@@ -3,7 +3,8 @@ name = "notedown-rt"
 version = "0.1.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Text parser"
-repository = "https://github.com/notedge/notedown-rs"
+repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-runtime"
+documentation = "https://github.com/notedge/notedown-rs"
 readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2021"
@@ -14,11 +15,6 @@ notedown_ast = {version = "0.14", path = "../notedown-ast", features = ["globset
 globset = "0.4.8"
 async-std = "1.10.0"
 
-[dependencies.syntect]
-version = "4.6.0"
-optional = true
-features = ["metadata"]
-
 [dependencies.self_update]
 version = "0.28.0"
 
@@ -26,4 +22,4 @@ version = "0.28.0"
 [dev-dependencies]
 
 [features]
-default = ["syntect"]
+default = []
