--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ default-members = [
 #    "projects/notedown-pest",
 #    "projects/notedown-parser",
 #    "projects/notedown-parser2",
+    "projects/notedown-runtime",
     "projects/notedown-lsp",
     "projects/text-utils",
 ]
