--- a/projects/notedown-runtime/Cargo.toml
+++ b/projects/notedown-runtime/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "notedown-rt"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Text parser"
 repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-runtime"
-documentation = "https://github.com/notedge/notedown-rs"
+documentation = "https://docs.rs/notedown-rt/latest/notedown_rt/"
 readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2021"
