--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,11 +1,13 @@
 version = "Two"
 edition = "2018"
 max_width = 144
+comment_width = 80
 
 imports_granularity = "Crate"
 use_small_heuristics = "Max"
 control_brace_style = "ClosingNextLine"
 match_arm_leading_pipes = "Preserve"
 format_macro_matchers = true
+wrap_comments = true
 normalize_comments = true
 format_code_in_doc_comments = true
