--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "notedown_ast"
-version = "0.15.7"
+version = "0.16.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Abstract Syntax Tree"
 repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-ast"
@@ -17,10 +17,8 @@ num = "0.4.0"
 rust_decimal = "1.19.0"
 itertools = "0.10.3"
 indexmap = "1.7.0"
-pest = { version = "2.1.3", optional = true }
-rsass = { version = "0.23.0", optional = true }
-globset = { version = "0.4.8", optional = true }
 yggdrasil-shared = { version = "0.1.7", optional = true }
+notedown-rt = {version = "0.3", path = "../notedown-runtime", features = ["lsp"]}
 
 [dependencies.text-utils]
 version = "0.4"
