--- a/projects/notedown-runtime/Cargo.toml
+++ b/projects/notedown-runtime/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "notedown-rt"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Text parser"
 repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-runtime"
@@ -11,11 +11,13 @@ edition = "2021"
 
 
 [dependencies]
-notedown_ast = {version = "0.15", path = "../notedown-ast", features = ["globset", "lsp"]}
-globset = "0.4.8"
+notedown_ast = {version = "0.16", path = "../notedown-ast", features = ["lsp"]}
 async-std = "1.10.0"
 self_update= "0.28.0"
 chrono = "*"
+pest = { version = "2.1.3", optional = true }
+rsass = { version = "0.23.0", optional = true }
+globset = { version = "0.4.8", optional = true }
 
 [dev-dependencies]
 
