--- a/projects/notedown-error/Cargo.toml
+++ b/projects/notedown-error/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "notedown_ast"
-version = "0.16.0"
+name = "notedown-error"
+version = "1.0.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Abstract Syntax Tree"
 repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-ast"
 documentation = "https://docs.rs/notedown_ast"
-categories = ["text-processing", "template-engine"]
+categories = ["err", "template-engine"]
 keywords = ["text", "utils"]
 readme = "../../readme.md"
 license = "MPL-2.0"
@@ -21,12 +21,6 @@ indexmap = "1.7.0"
 [dependencies.text-utils]
 version = "0.4"
 path = "../text-utils"
-
-#[dependencies.notedown-rt]
-#version = "0.3"
-#path = "../notedown-runtime"
-#default-features = false
-#features = []
 
 [dev-dependencies]
 
