--- a/projects/notedown-runtime/Cargo.toml
+++ b/projects/notedown-runtime/Cargo.toml
@@ -11,7 +11,8 @@ edition = "2021"
 
 
 [dependencies]
-notedown_ast = {version = "0.16", path = "../notedown-ast", features = ["lsp"]}
+notedown_ast = {version = "0.16", path = "../notedown-ast"}
+yggdrasil-shared = { version = "0.1.7", optional = true }
 async-std = "1.10.0"
 self_update= "0.28.0"
 chrono = "*"
@@ -19,7 +20,9 @@ pest = { version = "2.1.3", optional = true }
 rsass = { version = "0.23.0", optional = true }
 globset = { version = "0.4.8", optional = true }
 
+
 [dev-dependencies]
 
 [features]
 default = []
+lsp = ["yggdrasil-shared", "yggdrasil-shared/lsp"]
