🔧 Repair circular dependencies

--- a/projects/notedown-error/Cargo.toml
+++ b/projects/notedown-error/Cargo.toml
@@ -2,25 +2,25 @@
 name = "notedown-error"
 version = "1.0.0"
 authors = ["Aster <192607617@qq.com>"]
-description = "Notedown Abstract Syntax Tree"
+description = "Notedown Error Handlers"
 repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-ast"
-documentation = "https://docs.rs/notedown_ast"
-categories = ["err", "template-engine"]
-keywords = ["text", "utils"]
-readme = "../../readme.md"
+documentation = "https://docs.rs/notedown-error"
+categories = []
+keywords = ["error", "notedown"]
+readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
 url = "2.2.2"
-num = "0.4.0"
-rust_decimal = "1.19.0"
-itertools = "0.10.3"
-indexmap = "1.7.0"
+pest = { version = "2.1.3", optional = true }
+rsass = { version = "0.23.0", optional = true }
+globset = { version = "0.4.8", optional = true }
 
 [dependencies.text-utils]
 version = "0.4"
 path = "../text-utils"
+optional = true
 
 [dev-dependencies]
 
