--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -22,6 +22,10 @@ indexmap = "1.7.0"
 version = "0.4"
 path = "../text-utils"
 
+[dependencies.notedown-error]
+version = "1.0"
+path = "../notedown-error"
+
 #[dependencies.notedown-rt]
 #version = "0.3"
 #path = "../notedown-runtime"
