--- a/projects/notedown-runtime/Cargo.toml
+++ b/projects/notedown-runtime/Cargo.toml
@@ -16,16 +16,16 @@ yggdrasil-shared = { version = "0.1.7", optional = true }
 async-std = "1.10.0"
 self_update= "0.28.0"
 chrono = "0.4.19"
-pest = { version = "2.1.3", optional = true }
 rsass = { version = "0.23.0", optional = true }
-globset = { version = "0.4.8", optional = true }
+globset = "0.4.8"
 
 [dependencies.notedown-error]
 version = "1.0"
 path = "../notedown-error"
+fetatures = ["globset"]
 
 [dev-dependencies]
 
 [features]
-default = []
+default = ["lsp"]
 lsp = ["yggdrasil-shared", "yggdrasil-shared/lsp"]
