--- a/projects/notedown-error/Cargo.toml
+++ b/projects/notedown-error/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "notedown-error"
-version = "1.0.1"
+version = "1.1.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Error Handlers"
 repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-ast"
@@ -19,6 +19,8 @@ pest = { version = "2.1.3", optional = true }
 rsass = { version = "0.23.0", optional = true }
 globset = { version = "0.4.8", optional = true }
 lsp-types = { version = "0.91.1", optional = true }
+chrono = { version = "0.4.19", optional = true }
+yggdrasil-shared = { version = "0.1.7", optional = true }
 
 [dependencies.text-utils]
 version = "0.4"
@@ -29,3 +31,6 @@ optional = true
 
 [features]
 default = []
+
+[package.metadata.docs.rs]
+all-features = true
