--- a/projects/notedown-error/package.json
+++ b/projects/notedown-error/package.json
@@ -2,6 +2,7 @@
     "private": true,
     "scripts": {
         "u": "cargo upgrade",
+        "t": "cargo test --all-features",
         "p": "cargo publish --allow-dirty"
     }
 }
