--- a/projects/notedown-error/Cargo.toml
+++ b/projects/notedown-error/Cargo.toml
@@ -24,6 +24,7 @@ yggdrasil-shared = { version = "0.1.9", optional = true }
 docx-rs = { version = "0.3.2", optional = true }
 serde_json = { version = "1.0.74", optional = true }
 html_parser = { version = "0.6.2", optional = true }
+git2 = { version = "0.13.25", optional = true }
 
 [dependencies.text-utils]
 version = "0.4"
