--- a/projects/notedown-runtime/Cargo.toml
+++ b/projects/notedown-runtime/Cargo.toml
@@ -12,17 +12,13 @@ edition = "2021"
 
 [dependencies]
 notedown_ast = { version = "0.16", path = "../notedown-ast" }
-self_update = "0.28.0"
+# self_update = "0.28.0"
 chrono = {version = "0.4.19", features = ["serde"]}
 rsass = { version = "0.23.0", optional = true }
 yggdrasil-shared = { version = "0.1.7", default-features = false }
 async-std = { version = "1.10.0", optional = true }
 # Native only
-
-[dependencies.notedown-error]
-version = "1.1"
-path = "../notedown-error"
-features = ["chrono"]
+notedown-error = {version = "1.1.3", features = ["chrono"]}
 
 [dev-dependencies]
 
