--- a/projects/notedown-wasm/Cargo.toml
+++ b/projects/notedown-wasm/Cargo.toml
@@ -20,4 +20,4 @@ features = ["wasm"]
 [[test]]
 name = "wasm"
 path = "tests/main.rs"
-target = "wasm32-unknown-unknown"
+# target = "wasm32-unknown-unknown"
