--- a/projects/notedown-error/Cargo.toml
+++ b/projects/notedown-error/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "notedown-error"
-version = "1.1.4"
+version = "1.1.7"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Error Handlers"
 repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-ast"
@@ -13,6 +13,8 @@ edition = "2021"
 
 [dependencies]
 url = "2.2.2"
+yggdrasil-shared = { version = "0.2.1", default-features = false }
+# 3rd parts
 num = { version = "0.4.0", optional = true }
 rust_decimal = { version = "1.19.0", optional = true }
 pest = { version = "2.1.3", optional = true }
@@ -20,7 +22,6 @@ rsass = { version = "0.23.0", optional = true }
 globset = { version = "0.4.8", optional = true }
 lsp-types = { version = "0.91.1", optional = true }
 chrono = { version = "0.4.19", optional = true }
-yggdrasil-shared = { version = "0.1.9", optional = true }
 docx-rs = { version = "0.3.2", optional = true }
 serde_json = { version = "1.0.74", optional = true }
 html_parser = { version = "0.6.2", optional = true }
@@ -35,6 +36,7 @@ optional = true
 
 [features]
 default = []
+lsp = ["lsp-types", "yggdrasil-shared/lsp-types"]
 
 [package.metadata.docs.rs]
 all-features = true
