--- a/projects/notedown-runtime/Cargo.toml
+++ b/projects/notedown-runtime/Cargo.toml
@@ -13,21 +13,21 @@ edition = "2021"
 [dependencies]
 notedown_ast = { version = "0.16", path = "../notedown-ast" }
 # self_update = "0.28.0"
-chrono = {version = "0.4.19", features = ["serde"]}
+chrono = { version = "0.4.19", features = ["serde"] }
 rsass = { version = "0.23.0", optional = true }
-yggdrasil-shared = { version = "0.1.7", default-features = false }
+yggdrasil-shared = { version = "0.2.1", default-features = false }
 async-std = { version = "1.10.0", optional = true }
 # Native only
-notedown-error = {version = "1.1.4", features = ["chrono"]}
+notedown-error = { version = "1.1.6", features = ["chrono"] }
+dashmap = "5.0.0"
 
 [dev-dependencies]
 
 [features]
-default = ["wasm"]
+default = ["native"]
 lsp = [
     "native",
-    "yggdrasil-shared/lsp",
-    "notedown-error/yggdrasil-shared",
+    "yggdrasil-shared/lsp-types",
     "notedown-error/lsp-types"
 ]
 
