--- a/legacy/notedown-lsp/Cargo.toml
+++ b/legacy/notedown-lsp/Cargo.toml
@@ -26,5 +26,5 @@ itertools = "0.10.3"
 
 [dependencies.notedown-rt]
 version = "0.3"
-path = "../notedown-runtime"
+path = "../../projects/notedown-runtime"
 features = ["lsp"]
