--- a/projects/notedown-parser/Cargo.toml
+++ b/projects/notedown-parser/Cargo.toml
@@ -1,27 +1,19 @@
 [package]
 name = "notedown_parser"
-version = "0.12.0"
+version = "0.1.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Text parser"
 repository = "https://github.com/notedge/notedown-rs"
-readme = "../../readme.md"
+readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2021"
-publish = false
+
 
 [dependencies]
-
-notedown-pest = {version = "1.0", path = "../notedown-pest"}
-url = "2.2.2"
-
-[dependencies.notedown_ast]
-version = "0.16"
-path = "../notedown-ast"
-features = []
-
-[dependencies.notedown-rt]
-version = "0.3"
-path = "../notedown-runtime"
-features = []
+nom = "7.1.0"
+nom_locate = "4.0.0"
+notedown_ast = {version = "*", path = "../notedown-ast"}
+peginator = "0.6.0"
 
 [dev-dependencies]
+
