--- a/legacy/notedown-error/Cargo.toml
+++ b/legacy/notedown-error/Cargo.toml
@@ -29,7 +29,7 @@ git2 = { version = "0.15.0", optional = true }
 
 [dependencies.text-utils]
 version = "0.4"
-path = "../text-utils"
+path = "../../projects/text-utils"
 optional = true
 
 [dev-dependencies]
