--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "notedown-workspace",
     "private": true,
     "scripts": {
-        "u": "cargo upgrade --workspace",
+        "u": "cargo upgrade --offline --incompatible",
         "p": "cargo publish --allow-dirty",
         "pest": "cargo test --color=always --no-run --package notedown_parser --test pre_build gen_parser && cargo fmt --all",
         "build": "cargo build --release",
