--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "notedown_ast"
-version = "0.16.3"
+version = "0.14.12"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Abstract Syntax Tree"
 repository = "https://github.com/notedge/notedown-rs/tree/master/projects/notedown-ast"
@@ -12,23 +12,23 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-url = "2.2.2"
+url = "2.3.1"
 num = "0.4.0"
-rust_decimal = "1.19.0"
-itertools = "0.10.3"
-indexmap = "1.7.0"
+rust_decimal = "1.29.0"
+itertools = "0.10.5"
+indexmap = "1.9.2"
+pest = { version = "2.5.6", optional = true }
+rsass = { version = "0.27.0", optional = true }
+globset = {version = "0.4.10", optional = true}
+yggdrasil-shared = {version = "0.2.2", optional = true}
 
 [dependencies.text-utils]
 version = "0.4"
 path = "../text-utils"
 
-[dependencies.diagnostic-quick]
-version = "0.2.6"
-features = ["rust_decimal", "num"]
-
 [dev-dependencies]
 
 [features]
 default = []
+lsp = ["yggdrasil-shared", "yggdrasil-shared/lsp"]
 
