--- a/projects/notedown-parser/Cargo.toml
+++ b/projects/notedown-parser/Cargo.toml
@@ -1,19 +1,22 @@
 [package]
 name = "notedown_parser"
-version = "0.1.0"
+version = "0.12.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Text parser"
 repository = "https://github.com/notedge/notedown-rs"
-readme = "Readme.md"
+readme = "../../readme.md"
 license = "MPL-2.0"
 edition = "2021"
-
+publish = false
 
 [dependencies]
-nom = "7.1.0"
-nom_locate = "4.0.0"
-notedown_ast = {version = "*", path = "../notedown-ast"}
-peginator = "0.6.0"
+
+notedown-pest = {version = "1.0", path = "../notedown-pest"}
+url = "2.3.1"
+
+[dependencies.notedown_ast]
+version = "0.14"
+path = "../notedown-ast"
+features = ["pest"]
 
 [dev-dependencies]
-
