--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -20,7 +20,7 @@ indexmap = "1.9.2"
 pest = { version = "2.5.6", optional = true }
 rsass = { version = "0.27.0", optional = true }
 globset = {version = "0.4.10", optional = true}
-yggdrasil-shared = {version = "0.2.2", optional = true}
+#yggdrasil-shared = {version = "0.2.2", optional = true}
 
 [dependencies.text-utils]
 version = "0.4"
