--- a/projects/notedown-parser/Cargo.toml
+++ b/projects/notedown-parser/Cargo.toml
@@ -10,13 +10,12 @@ edition = "2021"
 publish = false
 
 [dependencies]
+pex = { version = "0.2.3", features = ["regex"] }
 
-notedown-pest = {version = "1.0", path = "../notedown-pest"}
-url = "2.3.1"
 
-[dependencies.notedown_ast]
-version = "0.14"
-path = "../notedown-ast"
-features = ["pest"]
+#[dependencies.notedown_ast]
+#version = "0.14"
+#path = "../notedown-ast"
+#features = ["pest"]
 
 [dev-dependencies]
