Define the IdentifierNode

--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -30,5 +30,5 @@ path = "../text-utils"
 
 [features]
 default = []
-lsp = ["yggdrasil-shared", "yggdrasil-shared/lsp"]
+#lsp = ["yggdrasil-shared", "yggdrasil-shared/lsp"]
 
