Clean useless dependencies

--- a/projects/notedown-parser/Cargo.toml
+++ b/projects/notedown-parser/Cargo.toml
@@ -13,9 +13,9 @@ publish = false
 pex = { version = "0.2.3", features = ["regex"] }
 
 
-#[dependencies.notedown_ast]
-#version = "0.14"
-#path = "../notedown-ast"
-#features = ["pest"]
+[dependencies.notedown_ast]
+version = "0.14"
+path = "../notedown-ast"
+features = []
 
 [dev-dependencies]
