--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -12,15 +12,17 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0.163", features = ["derive"] }
 url = "2.3.1"
 num = "0.4.0"
 rust_decimal = "1.29.0"
 itertools = "0.10.5"
 indexmap = "1.9.2"
-pest = { version = "2.5.6", optional = true }
+#pest = { version = "2.5.6", optional = true }
 rsass = { version = "0.27.0", optional = true }
 globset = {version = "0.4.10", optional = true}
 #yggdrasil-shared = {version = "0.2.2", optional = true}
+#diagnostic-quick = "0.4.0"
 
 [dependencies.text-utils]
 version = "0.4"
