--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -14,16 +14,17 @@ edition = "2021"
 [dependencies]
 deriver = "0.0.0"
 serde = { version = "1.0.163", features = ["derive"] }
-url = "2.3.1"
 num = "0.4.0"
 rust_decimal = "1.29.0"
 itertools = "0.10.5"
 indexmap = "1.9.2"
-#pest = { version = "2.5.6", optional = true }
 rsass = { version = "0.27.0", optional = true }
 globset = { version = "0.4.10", optional = true }
-#yggdrasil-shared = {version = "0.2.2", optional = true}
-#diagnostic-quick = "0.4.0"
+
+[dependencies.notedown-error]
+version = "1.1.10"
+path = "../notedown-error"
+features = ["url"]
 
 [dependencies.text-utils]
 version = "0.4"
