--- a/projects/notedown-error/Cargo.toml
+++ b/projects/notedown-error/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "notedown-image"
-version = "0.1.0"
+name = "notedown-error"
+version = "1.1.10"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Image Managers"
 repository = "https://github.com/notedge/notedown-rs"
@@ -10,9 +10,14 @@ edition = "2021"
 
 
 [dependencies]
-image = "0.24.5"
-dashmap = "5.4.0"
-url = "2.3.1"
+url = { version = "2.3.1", optional = true }
+#image = "0.24.5"
+#dashmap = "5.4.0"
+#url = "2.3.1"
+
+[dependencies.validatus]
+version = "0.0.0"
+path = 'C:\Users\Dell\CLionProjects\diagnostic-rs\projects\validation'
 
 [dev-dependencies]
-notedown_ast = { version = "*", path = "../notedown-ast" }
+#notedown_ast = { version = "*", path = "../notedown-ast" }
