--- a/projects/notedown-parser/Cargo.toml
+++ b/projects/notedown-parser/Cargo.toml
@@ -15,6 +15,11 @@ version = "0.14.*"
 path = "../notedown-ast"
 features = []
 
+[dependencies.notedown-error]
+version = "1.1.10"
+path = "../notedown-error"
+features = []
+
 [dependencies.pex]
 version = "0.2.4"
 features = ["regex"]
