--- a/projects/notedown-error/Cargo.toml
+++ b/projects/notedown-error/Cargo.toml
@@ -19,5 +19,11 @@ url = { version = "2.3.1", optional = true }
 version = "0.0.0"
 path = 'C:\Users\Dell\CLionProjects\diagnostic-rs\projects\validation'
 
+[dependencies.pex]
+optional = true
+version = "0.2.4"
+features = ["regex"]
+path = 'C:\Users\Dell\CLionProjects\pex\projects\pex-core'
+
 [dev-dependencies]
 #notedown_ast = { version = "*", path = "../notedown-ast" }
