--- a/projects/notedown-parser/Cargo.toml
+++ b/projects/notedown-parser/Cargo.toml
@@ -18,11 +18,8 @@ features = []
 [dependencies.notedown-error]
 version = "1.1.10"
 path = "../notedown-error"
-features = []
+features = ["pex"]
 
-[dependencies.pex]
-version = "0.2.4"
-features = ["regex"]
-path = 'C:\Users\Dell\CLionProjects\pex\projects\pex-core'
+
 
 [dev-dependencies]
