--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -13,13 +13,11 @@ edition = "2021"
 
 [dependencies]
 deriver = "0.0.0"
-serde = { version = "1.0.163", features = ["derive"] }
+serde = { version = "1.0.163", features = ["derive"], optional = true }
 num = "0.4.0"
 rust_decimal = "1.29.0"
 itertools = "0.10.5"
 indexmap = "1.9.2"
-rsass = { version = "0.27.0", optional = true }
-globset = { version = "0.4.10", optional = true }
 
 [dependencies.notedown-error]
 version = "1.1.10"
