Format html strings using external libraries

--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -28,6 +28,12 @@ features = ["url"]
 version = "0.4"
 path = "../text-utils"
 
+
+[dependencies.html-ast]
+version = "0.1.0"
+path = 'C:\Users\Dell\CLionProjects\HTMLer\projects\html-ast'
+optional = true
+
 [dev-dependencies]
 
 [features]
