--- a/projects/notedown-parser/Cargo.toml
+++ b/projects/notedown-parser/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 [dependencies.notedown_ast]
 version = "0.14.*"
 path = "../notedown-ast"
-features = []
+features = ["html-ast"]
 
 [dependencies.notedown-error]
 version = "1.1.10"
